welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:10: error: illegal start of statement
      )
      ^